--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   
 
 body {
-  background-color: #222;
+  background-color:  #202736;
   color: #fff;
   font-family: 'manrope';
   display: flex;
@@ -20,14 +20,16 @@ body {
   text-align: center;
   width: 28em;
   margin: 100px auto;
-  background-color: #2a2a2a;
+  background-color: #3d4b5d;
   padding: 25px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 .container .head {
   text-align: center;
+  size: 5px;
   margin-bottom: 10px;
+  color: #5ded92;
 }
 
 .container .quote  {
@@ -44,7 +46,6 @@ body {
   padding: auto;
   background-color: #4CAF50;
   margin-top: -7.6em;
-  color: white;
   border: none;
   border-radius: 100%;
   cursor: pointer;
@@ -59,6 +60,7 @@ body {
 
 button:hover {
   background-color: #54f259;
+  box-shadow: #fff;
 
 }
 }
@@ -66,7 +68,7 @@ button:hover {
 
 @media (max-width: 375px)  {
   body {
-    background-color: #222;
+    background-color: #202736;
     color: #fff;
     font-family: 'manrope';
     display: flex;
@@ -85,7 +87,7 @@ button:hover {
   text-align: center;
   width: 18em;
   margin: auto;
-  background-color: #2a2a2a;
+  background-color: #3d4b5d;
   justify-content: center;
   align-items: center;
   padding: 15px;
@@ -95,6 +97,8 @@ button:hover {
 }
 .container .head {
   text-align: center;
+  size: 1em;
+  color: #5ded92;
   margin-bottom: 10px;
 }
 
@@ -111,7 +115,7 @@ button:hover {
   margin: auto;
   width: 3em;
   padding: auto;
-  background-color: #044310;
+  background-color: #4CAF50;
   margin-top: -1.4em;
   color: white;
   border: none;
@@ -128,7 +132,7 @@ button:hover {
 
 
   button:hover {
-    background-color: #54f259;
+    background-color: #6cc46f;
   
   }
 }
